# Neural_Dino

./: .gitignore  CMakeLists.txt  DinoGame.cpp  DinoGame.h  Globals.cpp  Globals.h  README.md  Renderer.cpp  Renderer.h  main.cpp
maxlab/include/maxlab/: api_comm.h  assert_versions.h  data_streamer.h  errors.h  maxlab.h  spike_event.h  versions.h
set_sti_parameter/: 23353.cfg  Dino_Setup.py  test.cfg
